<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainSettingsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_primary"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="7dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:contentPadding="15dp">

                <TextView
                    android:id="@+id/tvProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textColor="@color/theme_primary"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:contentPadding="5dp">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/tvReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/reminder"
                    android:textColor="@color/theme_primary"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:contentPadding="5dp">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/tvDarkMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="Dark Mode"
                    android:textColor="@color/theme_primary"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="7dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:contentPadding="15dp">

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_language"
                    android:textColor="@color/theme_primary"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/others"
                android:textColor="@color/theme_primary" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="7dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:contentPadding="15dp">

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/theme_primary"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:contentPadding="15dp">

                <TextView
                    android:id="@+id/tvDateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/theme_primary"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                app:backgroundTint="@color/theme_error" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>